--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <head>
     <title>hyperlisk</title>
+
+    <link href="/css/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-    This page is under construction
+    <div id="particles-js" class="content">
+
+    
+
+    </div>
+
+    <!-- JS -->
+    <script src="/js/particles.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
