--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div class="name-wrapper">
                         <h1 class="name">Carter</h1>
                         <h1 class="name">Tomlenovich</h1>
+                        <p class="subtitle">Programming Student</p>
                 </div>
 
                 <!-- External Links -->
@@ -35,12 +36,8 @@
 
             </div></scetion>
 
-            <!-- Particle Panel -->
-            <scetion><div class="content">
-
-            
-
-            </div></scetion>
+            <!-- Blank Panel -->
+            <scetion><div class="blank"></div></scetion>
 
         </article>
     </div>
@@ -48,4 +45,5 @@
     <!-- JS -->
     <script src="/js/particles.min.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/console.js"></script>
 </body>
