--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div></scetion>
 
             <!-- Blank Panel -->
-            <scetion><div class="blank"></div></scetion>
+            <scetion class="null"><div class="blank"></div></scetion>
 
         </article>
     </div>
