added blog link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <a href="https://github.com/retrax24">GitHub</a><br>
                     <a href="https://twitch.tv/retraxa">Twitch</a><br>
                     <a href="https://devrant.com/users/hyperlisk">Devrant</a><br>
+		    <a href="/blog">Blog</a><br>
                 </div>
                 
                 <!-- PGP Key -->
